# mullande

./: --model  .gitignore  AGENTS.md  Cargo.toml  DEV.md  README.md  pyproject.toml  test_and_release.sh
config/: config.schema.json
src/: main.rs
src/agent/: mod.rs
src/cli/: mod.rs
src/mullande/: __init__.py  agent.py  cli.py  config.py  performance.py  workspace.py
src/performance/: mod.rs  table.rs
src/rust/: main.rs
src/rust/agent/: mod.rs  ollama.rs
src/rust/cli/: mod.rs
src/rust/config/: mod.rs
src/rust/logging/: mod.rs
src/rust/memory/: mod.rs
src/rust/performance/: mod.rs  table.rs
src/rust/tools/: mod.rs
src/rust/workspace/: mod.rs
src/workspace/: mod.rs
tests/: test_memory.py  test_mullande.py
