[package]
name = "mullande"
version = "0.1.0"
edition = "2024"
description = "A large model Agent system"
license = "MIT"
authors = ["michael <michael@example.com>"]

[[bin]]
name = "mullande"
path = "src/rust/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking", "stream", "default-tls"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
dialoguer = "0.11"
colored = "2.0"
prettytable-rs = "0.10"
chrono = { version = "0.4", features = ["serde", "std"] }
sys-info = "0.9"
lazy_static = "1.4"
async-stream = "0.3"
futures-util = "0.3"
